Allow cards to collapse in tuning column, bug fixes for drag and drop

--- a/src/app/builder/components/cards/CardStyle.less
+++ b/src/app/builder/components/cards/CardStyle.less
@@ -171,7 +171,7 @@
 
 .card-help-wrapper {
   position: absolute;
-  top: 11px;
+  top: 13px;
   right: 10px;
 }
 
@@ -189,15 +189,22 @@
   }
 }
 
+.elasticTransform-card {
+  .card-tuning-wrapper {
+    top: 20px;
+    right: 26px;
+  }
+}
+
 .card-tuning-wrapper {
   position: absolute;
-  top: 11px;
-  right: 30px;
+  top: 13px;
+  right: 34px;
 }
 
 .card-tuning-icon {
   stroke: rgba(255, 255, 255, 0.5);
-  width: 20px;
+  width: 16px;
   height: 20px;
   position: relative;
   cursor: pointer;
